--- a/src/assets/i18n/xx.json
+++ b/src/assets/i18n/xx.json
@@ -1,20 +1,26 @@
 {
   "COMPONENTS__NOT_YET_IMPLEMENTED": "XXX",
+
   "COMPONENTS__ABOUT": "XXX",
+
   "COMPONENTS__MOB_TYPE_SELECT_DIALOG__TITLE": "XXX",
   "COMPONENTS__MOB_TYPE_SELECT_DIALOG__ALL": "XXX",
   "COMPONENTS__MOB_TYPE_SELECT_DIALOG__NONE": "XXX",
   "COMPONENTS__MOB_TYPE_SELECT_DIALOG__DONE": "XXX",
+
   "COMPONENTS__SKILL_EDITOR__SELECT_SKILL": "XXX",
   "COMPONENTS__SKILL_EDITOR__ADD_UPGRADE": "XXX",
+
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ADD_SKILLTREE": "XXX",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ENTER_NAME": "XXX",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__INPUT_NAME": "XXX",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__BUTTON_ADD": "XXX",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_DUPLICATE": "XXX",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_REQUIRE": "XXX",
+
   "COMPONENTS__SKILLTREE_EDITOR__SKILL_EDITOR": "XXX",
   "COMPONENTS__SKILLTREE_EDITOR__PROPERTIES": "XXX",
+
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__TITLE": "XXX",
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__INSTRUCTIONS": "XXX",
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__SELECT": "XXX",
@@ -36,6 +42,7 @@
   "COMPONENTS__SKILLTREE_IMPORT_LEGACY_DIALOG__STEP_MOB_TYPE": "XXX",
   "COMPONENTS__SKILLTREE_IMPORT_LEGACY_DIALOG__SELECT_MOB_TYPES": "XXX",
   "COMPONENTS__SKILLTREE_IMPORT_LEGACY_DIALOG__SELECT_SKILLTREES": "XXX",
+
   "COMPONENTS__SKILLTREE_LIST__ADD_SKILLTREES": "XXX",
   "COMPONENTS__SKILLTREE_LIST__EDIT_PROPERTIES": "XXX",
   "COMPONENTS__SKILLTREE_LIST__EDIT_UPGRADES": "XXX",
@@ -44,6 +51,8 @@
   "COMPONENTS__SKILLTREE_LIST__ADD_SUCCESS": "{{id}} XXX",
   "COMPONENTS__SKILLTREE_LIST__DELETE_SUCCESS": "{{id}} XXX",
   "COMPONENTS__SKILLTREE_LIST__COPY_SUCCESS": "{{old}} XXX {{new}}.",
+  "COMPONENTS__SKILLTREE_LIST__SKILLTREE": "XXX",
+
   "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_DUPLICATE": "XXX",
   "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_REQUIRED": "XXX",
   "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_NO_WHITESPACES": "XXX",
@@ -60,6 +69,7 @@
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION": "XXX",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT_EMPTY": "{{id}} XXX",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT": "XXX",
+
   "COMPONENTS__SKILLTREE_CREATOR__REDO": "XXX",
   "COMPONENTS__SKILLTREE_CREATOR__UNDO": "XXX",
   "COMPONENTS__SKILLTREE_CREATOR__SAVE": "XXX",
@@ -69,6 +79,7 @@
   "COMPONENTS__SKILLTREE_CREATOR__ABOUT": "XXX",
   "COMPONENTS__SKILLTREE_CREATOR__IMPORT_LEGACY": "XXX",
   "COMPONENTS__SKILLTREE_CREATOR__IMPORT": "XXX",
+
   "COMPONENTS__UPGRADE_ADD_DIALOG__ADD_UPGRADE": "XXX",
   "COMPONENTS__UPGRADE_ADD_DIALOG__LEVEL": "XXX",
   "COMPONENTS__UPGRADE_ADD_DIALOG__LEVELS": "XXX",
@@ -82,6 +93,171 @@
   "COMPONENTS__UPGRADE_ADD_DIALOG__FIXED": "XXX",
   "COMPONENTS__UPGRADE_ADD_DIALOG__ERROR_RULE_DUPLICATED": "XXX",
   "COMPONENTS__UPGRADE_ADD_DIALOG__UPGRADE": "XXX",
+
+  "COMPONENTS__SKILLS__DELETE": "XXX",
+  "COMPONENTS__SKILLS__YES": "XXX",
+  "COMPONENTS__SKILLS__NO": "XXX",
+  "COMPONENTS__SKILLS__DONT_CHANGE": "XXX",
+  "COMPONENTS__SKILLS__ACTIVATE": "XXX",
+  "COMPONENTS__SKILLS__DEACTIVATE": "XXX",
+  "COMPONENTS__SKILLS__BACKPACK__ROWS": "XXX",
+  "COMPONENTS__SKILLS__BACKPACK__ROWS_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__BACKPACK__ROWS_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__BACKPACK__ROWS_POPUP": "XXX",
+  "COMPONENTS__SKILLS__BACKPACK__DROP_DEATH": "XXX",
+  "COMPONENTS__SKILLS__BEHAVIOR__FRIENDLY": "XXX",
+  "COMPONENTS__SKILLS__BEHAVIOR__AGGRESSIVE": "XXX",
+  "COMPONENTS__SKILLS__BEHAVIOR__FARM": "XXX",
+  "COMPONENTS__SKILLS__BEHAVIOR__RAID": "XXX",
+  "COMPONENTS__SKILLS__BEHAVIOR__DUEL": "XXX",
+  "COMPONENTS__SKILLS__CONTROL__ACTIVE": "XXX",
+  "COMPONENTS__SKILLS__DAMAGE__DAMAGE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__DAMAGE__DAMAGE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__DAMAGE__DAMAGE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__DAMAGE__DAMAGE": "XXX",
+  "COMPONENTS__SKILLS__FIRE__CHANCE": "XXX",
+  "COMPONENTS__SKILLS__FIRE__CHANCE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__FIRE__CHANCE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__FIRE__CHANCE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__FIRE__DURATION": "XXX",
+  "COMPONENTS__SKILLS__FIRE__DURATION_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__FIRE__DURATION_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__FIRE__DURATION_POPUP": "XXX",
+  "COMPONENTS__SKILLS__HEAL__TIMER": "XXX",
+  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_POPUP": "XXX",
+  "COMPONENTS__SKILLS__HEAL__HEALTH": "XXX",
+  "COMPONENTS__SKILLS__HEAL__HEALTH_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__HEAL__HEALTH_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__HEAL__HEALTH_POPUP": "XXX",
+  "COMPONENTS__SKILLS__STOMP__DAMAGE": "XXX",
+  "COMPONENTS__SKILLS__STOMP__DAMAGE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__STOMP__DAMAGE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__STOMP__DAMAGE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__STOMP__CHANCE": "XXX",
+  "COMPONENTS__SKILLS__STOMP__CHANCE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__STOMP__CHANCE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__STOMP__CHANCE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__KNOCKBACK__CHANCE": "XXX",
+  "COMPONENTS__SKILLS__KNOCKBACK__CHANCE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__KNOCKBACK__CHANCE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__KNOCKBACK__CHANCE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__LIGHTNING__CHANCE": "XXX",
+  "COMPONENTS__SKILLS__LIGHTNING__CHANCE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__LIGHTNING__CHANCE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__LIGHTNING__CHANCE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__LIGHTNING__DAMAGE": "XXX",
+  "COMPONENTS__SKILLS__LIGHTNING__DAMAGE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__LIGHTNING__DAMAGE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__LIGHTNING__DAMAGE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__WITHER__CHANCE": "XXX",
+  "COMPONENTS__SKILLS__WITHER__CHANCE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__WITHER__CHANCE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__WITHER__CHANCE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__WITHER__DURATION": "XXX",
+  "COMPONENTS__SKILLS__WITHER__DURATION_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__WITHER__DURATION_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__WITHER__DURATION_POPUP": "XXX",
+  "COMPONENTS__SKILLS__SLOW__CHANCE": "XXX",
+  "COMPONENTS__SKILLS__SLOW__CHANCE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__SLOW__CHANCE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__SLOW__CHANCE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__SLOW__DURATION": "XXX",
+  "COMPONENTS__SKILLS__SLOW__DURATION_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__SLOW__DURATION_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__SLOW__DURATION_POPUP": "XXX",
+  "COMPONENTS__SKILLS__POISON__CHANCE": "XXX",
+  "COMPONENTS__SKILLS__POISON__CHANCE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__POISON__CHANCE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__POISON__CHANCE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__POISON__DURATION": "XXX",
+  "COMPONENTS__SKILLS__POISON__DURATION_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__POISON__DURATION_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__POISON__DURATION_POPUP": "XXX",
+  "COMPONENTS__SKILLS__THORNS__CHANCE": "XXX",
+  "COMPONENTS__SKILLS__THORNS__CHANCE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__THORNS__CHANCE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__THORNS__CHANCE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__THORNS__REFLECTION": "XXX",
+  "COMPONENTS__SKILLS__THORNS__REFLECTION_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__THORNS__REFLECTION_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__THORNS__REFLECTION_POPUP": "XXX",
+  "COMPONENTS__SKILLS__SHIELD__CHANCE": "XXX",
+  "COMPONENTS__SKILLS__SHIELD__CHANCE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__SHIELD__CHANCE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__SHIELD__CHANCE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__SHIELD__REDIRECTED": "XXX",
+  "COMPONENTS__SKILLS__SHIELD__REDIRECTED_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__SHIELD__REDIRECTED_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__SHIELD__REDIRECTED_POPUP": "XXX",
+  "COMPONENTS__SKILLS__LIFE_HEALTH": "XXX",
+  "COMPONENTS__SKILLS__LIFE_HEALTH_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__LIFE_HEALTH_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__LIFE_HEALTH_POPUP": "XXX",
+  "COMPONENTS__SKILLS__PICKUP__RANGE": "XXX",
+  "COMPONENTS__SKILLS__PICKUP__RANGE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__PICKUP__RANGE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__PICKUP__RANGE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__PICKUP__EXP": "XXX",
+  "COMPONENTS__SKILLS__SPRINT__ACTIVE": "XXX",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN": "XXX",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_POPUP": "XXX",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT": "XXX",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_POPUP": "XXX",
+  "COMPONENTS__SKILLS__RIDE__CAN_FLY": "XXX",
+  "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT": "XXX",
+  "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT_POPUP": "XXX",
+  "COMPONENTS__SKILLS__RIDE__SPEED": "XXX",
+  "COMPONENTS__SKILLS__RIDE__SPEED_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__RIDE__SPEED_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__RIDE__SPEED_POPUP": "XXX",
+  "COMPONENTS__SKILLS__BEACON__RANGE": "XXX",
+  "COMPONENTS__SKILLS__BEACON__RANGE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__BEACON__RANGE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__BEACON__RANGE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__BEACON__DURATION": "XXX",
+  "COMPONENTS__SKILLS__BEACON__DURATION_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__BEACON__DURATION_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__BEACON__DURATION_POPUP": "XXX",
+  "COMPONENTS__SKILLS__BEACON__NUMBER": "XXX",
+  "COMPONENTS__SKILLS__BEACON__NUMBER_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__BEACON__NUMBER_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__BEACON__NUMBER_POPUP": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF_LEVEL": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__FIRE_RESISTANCE": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__STRENGTH": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__WATER_BREATING": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__INVISIBILITY": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__SPEED": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__RESISTANCE": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__NIGHT_VISION": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__LUCK": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__JUMP_BOOST": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__HASTE": "XXX",
+  "COMPONENTS__SKILLS__BEACON__BUFF__ABSORPTION": "XXX",
+  "COMPONENTS__SKILLS__RANGED__RATE": "XXX",
+  "COMPONENTS__SKILLS__RANGED__RATE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__RANGED__RATE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__RANGED__RATE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__RANGED__RANGE": "XXX",
+  "COMPONENTS__SKILLS__RANGED__RANGE_PREFIX": "XXX",
+  "COMPONENTS__SKILLS__RANGED__RANGE_SUFFIX": "XXX",
+  "COMPONENTS__SKILLS__RANGED__RANGE_POPUP": "XXX",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE": "XXX",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__EGG": "XXX",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__WITHER_SKULL": "XXX",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__LARGE_FIREBALL": "XXX",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__FIREBALL": "XXX",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__SNOWBALL": "XXX",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__ARROW": "XXX",
+
   "LEVEL_RULE_EXACT": "XXX {{levels}}",
   "LEVEL_RULE_EVERY_LEVEL": "XXX",
   "LEVEL_RULE_EVERY_LEVEL_START": "XXX {{start}}",
@@ -89,6 +265,7 @@
   "LEVEL_RULE_EVERY_X_LEVEL": "XXX {{level}} XXX",
   "LEVEL_RULE_EVERY_X_LEVEL_START": "XXX {{level}} XXX {{start}}",
   "LEVEL_RULE_EVERY_X_LEVEL_START_END": "XXX {{level}} XXX {{start}} XXX {{end}}",
+
   "EFFECT__IMPORT_SKILLTREE__IMPORT": "XXX",
   "EFFECT__IMPORT_SKILLTREE_FAILED__INVALID": "XXX",
   "EFFECT__IMPORT_SKILLTREE_FAILED__DUPLICATE": "XXX {{id}}",
@@ -101,6 +278,7 @@
   "EFFECT__SAVE_SKILLTREE_FAILED__ERROR": "XXX",
   "EFFECT__RENAME_SKILLTREE__SUCCESS": "{{old}} XXX {{new}}",
   "EFFECT__RENAME_SKILLTREE__SKILLTREE": "XXX",
+
   "MOB_TYPE__BAT": "XXX",
   "MOB_TYPE__BLAZE": "XXX",
   "MOB_TYPE__CAVESPIDER": "XXX",
@@ -148,6 +326,7 @@
   "MOB_TYPE__ZOMBIEHORSE": "XXX",
   "MOB_TYPE__ZOMBIEPIGMAN": "XXX",
   "MOB_TYPE__ZOMBIEVILLAGER": "XXX",
+
   "SKILL_NAME__BACKPACK": "XXX",
   "SKILL_NAME__BEACON": "XXX",
   "SKILL_NAME__BEHAVIOR": "XXX",
