--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,26 +1,33 @@
 {
   "COMPONENTS__NOT_YET_IMPLEMENTED": "Not yet implemented",
+
   "COMPONENTS__ABOUT": "Used Libraries",
+
   "COMPONENTS__MOB_TYPE_SELECT_DIALOG__TITLE": "Select Mob Types:",
   "COMPONENTS__MOB_TYPE_SELECT_DIALOG__ALL": "All",
   "COMPONENTS__MOB_TYPE_SELECT_DIALOG__NONE": "None",
   "COMPONENTS__MOB_TYPE_SELECT_DIALOG__DONE": "Done",
+
   "COMPONENTS__SKILL_EDITOR__SELECT_SKILL": "Select Skill",
   "COMPONENTS__SKILL_EDITOR__ADD_UPGRADE": "Add Upgrade",
+
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ADD_SKILLTREE": "Add Skilltree",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ENTER_NAME": "Please enter a name.",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__INPUT_NAME": "Skilltree Name",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__BUTTON_ADD": "Add",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_DUPLICATE": "There is already a skilltree with this name.",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_REQUIRE": "Please enter a skilltree name.",
+
   "COMPONENTS__SKILLTREE_EDITOR__SKILL_EDITOR": "Skill Editor",
   "COMPONENTS__SKILLTREE_EDITOR__PROPERTIES": "Properties",
+
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__TITLE": "Import Skilltree",
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__INSTRUCTIONS": "Select a Skilltree-File (.json)",
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__SELECT": "Select",
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__IMPORT": "Import",
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__ERROR": "Error",
   "COMPONENTS__SKILLTREE_IMPORT_DIALOG__INVALID_FILE": "This file is not a valid json file.",
+
   "COMPONENTS__SKILLTREE_IMPORT_LEGACY_DIALOG__TITLE": "Import Skilltree",
   "COMPONENTS__SKILLTREE_IMPORT_LEGACY_DIALOG__INSTRUCTIONS": "Select a legacy Skilltree-File (.st)",
   "COMPONENTS__SKILLTREE_IMPORT_LEGACY_DIALOG__SELECT": "Select",
@@ -36,6 +43,7 @@
   "COMPONENTS__SKILLTREE_IMPORT_LEGACY_DIALOG__STEP_MOB_TYPE": "Select Mobtype",
   "COMPONENTS__SKILLTREE_IMPORT_LEGACY_DIALOG__SELECT_MOB_TYPES": "Select Mob Types:",
   "COMPONENTS__SKILLTREE_IMPORT_LEGACY_DIALOG__SELECT_SKILLTREES": "Select Skilltrees:",
+
   "COMPONENTS__SKILLTREE_LIST__ADD_SKILLTREES": "Add Skilltree",
   "COMPONENTS__SKILLTREE_LIST__EDIT_PROPERTIES": "Edit Skilltree Properties",
   "COMPONENTS__SKILLTREE_LIST__EDIT_UPGRADES": "Edit Skill Upgrades",
@@ -44,6 +52,8 @@
   "COMPONENTS__SKILLTREE_LIST__ADD_SUCCESS": "{{id}} was added successfully.",
   "COMPONENTS__SKILLTREE_LIST__DELETE_SUCCESS": "{{id}} was deleted successfully.",
   "COMPONENTS__SKILLTREE_LIST__COPY_SUCCESS": "{{old}} was copied successfully to {{new}}.",
+  "COMPONENTS__SKILLTREE_LIST__SKILLTREE": "Skilltree",
+
   "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_DUPLICATE": "There is already a skilltree with this name.",
   "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_REQUIRED": "Please enter a skilltree name.",
   "COMPONENTS__SKILLTREE_PROPERTIES__ERROR_NO_WHITESPACES": "Whitespaces are not allowed.",
@@ -60,6 +70,7 @@
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION": "Permission",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT_EMPTY": "{{id}} (Permission)",
   "COMPONENTS__SKILLTREE_PROPERTIES__PERMISSION_INPUT": "Permission",
+
   "COMPONENTS__SKILLTREE_CREATOR__REDO": "Redo last change",
   "COMPONENTS__SKILLTREE_CREATOR__UNDO": "Undo last change",
   "COMPONENTS__SKILLTREE_CREATOR__SAVE": "Save changes",
@@ -70,6 +81,7 @@
   "COMPONENTS__SKILLTREE_CREATOR__IMPORT_LEGACY": "Import Legacy Skilltree",
   "COMPONENTS__SKILLTREE_CREATOR__IMPORT": "Import Skilltree",
   "COMPONENTS__SKILLTREE_CREATOR__SHUTDOWN": "The server was shut down. Changes will not be saved.",
+
   "COMPONENTS__UPGRADE_ADD_DIALOG__ADD_UPGRADE": "Add Upgrade",
   "COMPONENTS__UPGRADE_ADD_DIALOG__LEVEL": "Level",
   "COMPONENTS__UPGRADE_ADD_DIALOG__LEVELS": "Levels (space/comma seperated)",
@@ -83,6 +95,171 @@
   "COMPONENTS__UPGRADE_ADD_DIALOG__FIXED": "Fixed",
   "COMPONENTS__UPGRADE_ADD_DIALOG__ERROR_RULE_DUPLICATED": "There is already a rule with these values.",
   "COMPONENTS__UPGRADE_ADD_DIALOG__UPGRADE": "Upgrade",
+
+  "COMPONENTS__SKILLS__DELETE": "Delete",
+  "COMPONENTS__SKILLS__YES": "Yes",
+  "COMPONENTS__SKILLS__NO": "No",
+  "COMPONENTS__SKILLS__DONT_CHANGE": "Don't change",
+  "COMPONENTS__SKILLS__ACTIVATE": "Activate",
+  "COMPONENTS__SKILLS__DEACTIVATE": "Deactivate",
+  "COMPONENTS__SKILLS__BACKPACK__ROWS": "Rows",
+  "COMPONENTS__SKILLS__BACKPACK__ROWS_SUFFIX": "rows",
+  "COMPONENTS__SKILLS__BACKPACK__ROWS_PREFIX": "",
+  "COMPONENTS__SKILLS__BACKPACK__ROWS_POPUP": "<p>The number of rows the inventory will have.<br>  Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__BACKPACK__DROP_DEATH": "Drop content on death?",
+  "COMPONENTS__SKILLS__BEHAVIOR__FRIENDLY": "Friendly Mode",
+  "COMPONENTS__SKILLS__BEHAVIOR__AGGRESSIVE": "Aggressive Mode",
+  "COMPONENTS__SKILLS__BEHAVIOR__FARM": "Farm Mode",
+  "COMPONENTS__SKILLS__BEHAVIOR__RAID": "Raid Mode",
+  "COMPONENTS__SKILLS__BEHAVIOR__DUEL": "Duel Mode",
+  "COMPONENTS__SKILLS__CONTROL__ACTIVE": "Active?",
+  "COMPONENTS__SKILLS__DAMAGE__DAMAGE_SUFFIX": "damage",
+  "COMPONENTS__SKILLS__DAMAGE__DAMAGE_PREFIX": "",
+  "COMPONENTS__SKILLS__DAMAGE__DAMAGE_POPUP": "<p>The amount of damage the pet will cause with melee attacks.<br>Format: [+-=][number]<br>Examples:<br>+2.5<br>-3<br>=6.0</p>",
+  "COMPONENTS__SKILLS__DAMAGE__DAMAGE": "Damage",
+  "COMPONENTS__SKILLS__FIRE__CHANCE": "Chance",
+  "COMPONENTS__SKILLS__FIRE__CHANCE_PREFIX": "",
+  "COMPONENTS__SKILLS__FIRE__CHANCE_SUFFIX": "%",
+  "COMPONENTS__SKILLS__FIRE__CHANCE_POPUP": "<p>The chance the pet will light an enemy on fire on hit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__FIRE__DURATION": "Duration",
+  "COMPONENTS__SKILLS__FIRE__DURATION_PREFIX": "",
+  "COMPONENTS__SKILLS__FIRE__DURATION_SUFFIX": "sec",
+  "COMPONENTS__SKILLS__FIRE__DURATION_POPUP": "<p>The duration the target will be on fire.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__HEAL__TIMER": "Timer",
+  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_PREFIX": "Heal every",
+  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_SUFFIX": "seconds",
+  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_POPUP": "<p>The time between healing.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__HEAL__HEALTH": "Added Health",
+  "COMPONENTS__SKILLS__HEAL__HEALTH_PREFIX": "",
+  "COMPONENTS__SKILLS__HEAL__HEALTH_SUFFIX": "health",
+  "COMPONENTS__SKILLS__HEAL__HEALTH_POPUP": "<p>The amount of health the pet will heal.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__STOMP__DAMAGE": "Damage",
+  "COMPONENTS__SKILLS__STOMP__DAMAGE_PREFIX": "",
+  "COMPONENTS__SKILLS__STOMP__DAMAGE_SUFFIX": "damage",
+  "COMPONENTS__SKILLS__STOMP__DAMAGE_POPUP": "<p>The damage the pet will cause with stomping on the ground.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__STOMP__CHANCE": "Chance",
+  "COMPONENTS__SKILLS__STOMP__CHANCE_PREFIX": "",
+  "COMPONENTS__SKILLS__STOMP__CHANCE_SUFFIX": "%",
+  "COMPONENTS__SKILLS__STOMP__CHANCE_POPUP": "<p>The chance the pet will stomp on the ground.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__KNOCKBACK__CHANCE": "Chance",
+  "COMPONENTS__SKILLS__KNOCKBACK__CHANCE_PREFIX": "",
+  "COMPONENTS__SKILLS__KNOCKBACK__CHANCE_SUFFIX": "%",
+  "COMPONENTS__SKILLS__KNOCKBACK__CHANCE_POPUP": "<p>The chance the pet will knock back his target on hit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__LIGHTNING__CHANCE": "Chance",
+  "COMPONENTS__SKILLS__LIGHTNING__CHANCE_PREFIX": "",
+  "COMPONENTS__SKILLS__LIGHTNING__CHANCE_SUFFIX": "%",
+  "COMPONENTS__SKILLS__LIGHTNING__CHANCE_POPUP": "<p>The chance a hit will cause a lightning.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__LIGHTNING__DAMAGE": "Damage",
+  "COMPONENTS__SKILLS__LIGHTNING__DAMAGE_PREFIX": "",
+  "COMPONENTS__SKILLS__LIGHTNING__DAMAGE_SUFFIX": "%",
+  "COMPONENTS__SKILLS__LIGHTNING__DAMAGE_POPUP": "<p>The damage the lightning strike will cause.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__WITHER__CHANCE": "Chance",
+  "COMPONENTS__SKILLS__WITHER__CHANCE_PREFIX": "",
+  "COMPONENTS__SKILLS__WITHER__CHANCE_SUFFIX": "%",
+  "COMPONENTS__SKILLS__WITHER__CHANCE_POPUP": "<p>The chance the pet will wither it'S target on hit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__WITHER__DURATION": "Duration",
+  "COMPONENTS__SKILLS__WITHER__DURATION_PREFIX": "",
+  "COMPONENTS__SKILLS__WITHER__DURATION_SUFFIX": "sec",
+  "COMPONENTS__SKILLS__WITHER__DURATION_POPUP": "<p>The duration the target is withered.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__SLOW__CHANCE": "Chance",
+  "COMPONENTS__SKILLS__SLOW__CHANCE_PREFIX": "",
+  "COMPONENTS__SKILLS__SLOW__CHANCE_SUFFIX": "%",
+  "COMPONENTS__SKILLS__SLOW__CHANCE_POPUP": "<p>The chance at which the pet will slow it's target on hit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__SLOW__DURATION": "Duration",
+  "COMPONENTS__SKILLS__SLOW__DURATION_PREFIX": "",
+  "COMPONENTS__SKILLS__SLOW__DURATION_SUFFIX": "sec",
+  "COMPONENTS__SKILLS__SLOW__DURATION_POPUP": "<p>The duration the target will be slowed.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__POISON__CHANCE": "Chance",
+  "COMPONENTS__SKILLS__POISON__CHANCE_PREFIX": "",
+  "COMPONENTS__SKILLS__POISON__CHANCE_SUFFIX": "%",
+  "COMPONENTS__SKILLS__POISON__CHANCE_POPUP": "<p>The chance the pet will poison it's target on hit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__POISON__DURATION": "Duration",
+  "COMPONENTS__SKILLS__POISON__DURATION_PREFIX": "",
+  "COMPONENTS__SKILLS__POISON__DURATION_SUFFIX": "%",
+  "COMPONENTS__SKILLS__POISON__DURATION_POPUP": "<p>The duration the target will be poisioned.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__THORNS__CHANCE": "Chance",
+  "COMPONENTS__SKILLS__THORNS__CHANCE_PREFIX": "",
+  "COMPONENTS__SKILLS__THORNS__CHANCE_SUFFIX": "%",
+  "COMPONENTS__SKILLS__THORNS__CHANCE_POPUP": "<p>The chance damage from an attacker is reflected.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__THORNS__REFLECTION": "Reflection",
+  "COMPONENTS__SKILLS__THORNS__REFLECTION_PREFIX": "",
+  "COMPONENTS__SKILLS__THORNS__REFLECTION_SUFFIX": "%",
+  "COMPONENTS__SKILLS__THORNS__REFLECTION_POPUP": "<p>The percentage of the damage that will be reflected to the attacket.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__SHIELD__CHANCE": "Chance",
+  "COMPONENTS__SKILLS__SHIELD__CHANCE_PREFIX": "",
+  "COMPONENTS__SKILLS__SHIELD__CHANCE_SUFFIX": "%",
+  "COMPONENTS__SKILLS__SHIELD__CHANCE_POPUP": "<p>The chance at which damage is reflected from the owner to the pet.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__SHIELD__REDIRECTED": "Redirected",
+  "COMPONENTS__SKILLS__SHIELD__REDIRECTED_PREFIX": "",
+  "COMPONENTS__SKILLS__SHIELD__REDIRECTED_SUFFIX": "%",
+  "COMPONENTS__SKILLS__SHIELD__REDIRECTED_POPUP": "<p>The percentage of the damage that will be reflected to the pet.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__LIFE_HEALTH": "Health",
+  "COMPONENTS__SKILLS__LIFE_HEALTH_PREFIX": "",
+  "COMPONENTS__SKILLS__LIFE_HEALTH_SUFFIX": "extra health",
+  "COMPONENTS__SKILLS__LIFE_HEALTH_POPUP": "<p>The amount of extra health the pet will get.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__PICKUP__RANGE": "Range",
+  "COMPONENTS__SKILLS__PICKUP__RANGE_PREFIX": "",
+  "COMPONENTS__SKILLS__PICKUP__RANGE_SUFFIX": "meters",
+  "COMPONENTS__SKILLS__PICKUP__RANGE_POPUP": "<p>The range where blocks will be picked up by the pet.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__PICKUP__EXP": "Can pick up exp?",
+  "COMPONENTS__SKILLS__SPRINT__ACTIVE": "Active?",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN": "Fly Regen Rate",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_PREFIX": "",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_SUFFIX": "Meters/Tick",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_POPUP": "<p>Only needed when the fly limit is active.<br>How fast the pet can fly again.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT": "Fly Limit",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_PREFIX": "",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_SUFFIX": "meters",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_POPUP": "<p>Limit how long the pet can fly.<br>Setting it to 0 will disable the limit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RIDE__CAN_FLY": "Can Fly?",
+  "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT": "Jump Height",
+  "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT_PREFIX": "",
+  "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT_SUFFIX": "blocks",
+  "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT_POPUP": "<p>How high the pet can jump.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RIDE__SPEED": "Ride Speed",
+  "COMPONENTS__SKILLS__RIDE__SPEED_PREFIX": "",
+  "COMPONENTS__SKILLS__RIDE__SPEED_SUFFIX": "%",
+  "COMPONENTS__SKILLS__RIDE__SPEED_POPUP": "<p>The speed at which the owner can ride the pet.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__BEACON__RANGE": "Buff Range",
+  "COMPONENTS__SKILLS__BEACON__RANGE_PREFIX": "",
+  "COMPONENTS__SKILLS__BEACON__RANGE_SUFFIX": "meters",
+  "COMPONENTS__SKILLS__BEACON__RANGE_POPUP": "<p>The amount of buffs the owner of the pet can select at once.<br>Format: [+-=][number]<br>Examples:<br>+5<br>-13<br>=1</p>",
+  "COMPONENTS__SKILLS__BEACON__DURATION": "Buff duration",
+  "COMPONENTS__SKILLS__BEACON__DURATION_PREFIX": "",
+  "COMPONENTS__SKILLS__BEACON__DURATION_SUFFIX": "sec",
+  "COMPONENTS__SKILLS__BEACON__DURATION_POPUP": "<p>The duration the beacon buffs will last.<br>Format: [+-=][number]<br>Examples:<br>+5<br>-13<br>=1</p>",
+  "COMPONENTS__SKILLS__BEACON__NUMBER": "Number of available buffs",
+  "COMPONENTS__SKILLS__BEACON__NUMBER_PREFIX": "",
+  "COMPONENTS__SKILLS__BEACON__NUMBER_SUFFIX": "buffs",
+  "COMPONENTS__SKILLS__BEACON__NUMBER_POPUP": "<p>The range the beacon buffs will be distributed.<br>Format: [+-=][number]<br>Examples:<br>+5<br>-13<br>=1</p>",
+  "COMPONENTS__SKILLS__BEACON__BUFF_LEVEL": "Level",
+  "COMPONENTS__SKILLS__BEACON__BUFF__FIRE_RESISTANCE": "Fire Resistance",
+  "COMPONENTS__SKILLS__BEACON__BUFF__STRENGTH": "Strength",
+  "COMPONENTS__SKILLS__BEACON__BUFF__WATER_BREATING": "Water Breathing",
+  "COMPONENTS__SKILLS__BEACON__BUFF__INVISIBILITY": "Invisibility",
+  "COMPONENTS__SKILLS__BEACON__BUFF__SPEED": "Speed",
+  "COMPONENTS__SKILLS__BEACON__BUFF__RESISTANCE": "Resistance",
+  "COMPONENTS__SKILLS__BEACON__BUFF__NIGHT_VISION": "Night Vision",
+  "COMPONENTS__SKILLS__BEACON__BUFF__LUCK": "Luck",
+  "COMPONENTS__SKILLS__BEACON__BUFF__JUMP_BOOST": "Jump Boost",
+  "COMPONENTS__SKILLS__BEACON__BUFF__HASTE": "Haste",
+  "COMPONENTS__SKILLS__BEACON__BUFF__ABSORPTION": "Absorbtion",
+  "COMPONENTS__SKILLS__RANGED__RATE": "Rate of fire",
+  "COMPONENTS__SKILLS__RANGED__RATE_PREFIX": "",
+  "COMPONENTS__SKILLS__RANGED__RATE_SUFFIX": " x 50ms delay = shots/second",
+  "COMPONENTS__SKILLS__RANGED__RATE_POPUP": "<p>The rate at which the pet will shot.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RANGED__RANGE": "Range",
+  "COMPONENTS__SKILLS__RANGED__RANGE_PREFIX": "",
+  "COMPONENTS__SKILLS__RANGED__RANGE_SUFFIX": "meters",
+  "COMPONENTS__SKILLS__RANGED__RANGE_POPUP": "<p>The range the pet will start shooting.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE": "PROJECTILE",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__EGG": "Egg",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__WITHER_SKULL": "Wither Skull",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__LARGE_FIREBALL": "Large Fireball",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__FIREBALL": "Fireball",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__SNOWBALL": "Snowball",
+  "COMPONENTS__SKILLS__RANGED__PROJECTILE__ARROW": "Arrow",
+
   "LEVEL_RULE_EXACT": "Level: {{levels}}",
   "LEVEL_RULE_EVERY_LEVEL": "Every level",
   "LEVEL_RULE_EVERY_LEVEL_START": "Every level, starting at level {{start}}",
@@ -90,6 +267,7 @@
   "LEVEL_RULE_EVERY_X_LEVEL": "Every {{level}} level",
   "LEVEL_RULE_EVERY_X_LEVEL_START": "Every {{level}} level, starting at level {{start}}",
   "LEVEL_RULE_EVERY_X_LEVEL_START_END": "Every {{level}} level, starting at level {{start}}, ending at level {{end}}",
+
   "EFFECT__IMPORT_SKILLTREE__IMPORT": "Import",
   "EFFECT__IMPORT_SKILLTREE_FAILED__INVALID": "This file is not a valid skilltree file.",
   "EFFECT__IMPORT_SKILLTREE_FAILED__DUPLICATE": "There is already a skilltree with this id: {{id}}",
@@ -102,6 +280,7 @@
   "EFFECT__SAVE_SKILLTREE_FAILED__ERROR": "Error",
   "EFFECT__RENAME_SKILLTREE__SUCCESS": "{{old}} was renamed to {{new}}",
   "EFFECT__RENAME_SKILLTREE__SKILLTREE": "Skilltree",
+
   "MOB_TYPE__BAT": "Bat",
   "MOB_TYPE__BLAZE": "Blaze",
   "MOB_TYPE__CAVESPIDER": "Cave Spider",
@@ -149,6 +328,7 @@
   "MOB_TYPE__ZOMBIEHORSE": "Zombie Horse",
   "MOB_TYPE__ZOMBIEPIGMAN": "Zombie Pigman",
   "MOB_TYPE__ZOMBIEVILLAGER": "Zombie Villager",
+
   "SKILL_NAME__BACKPACK": "Backpack",
   "SKILL_NAME__BEACON": "Beacon",
   "SKILL_NAME__BEHAVIOR": "Behavior",
