add option do disable premium skills

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -76,6 +76,8 @@
   "COMPONENTS__SKILLTREE_CREATOR__SAVE": "Save changes",
   "COMPONENTS__SKILLTREE_CREATOR__BACK": "Back",
   "COMPONENTS__SKILLTREE_CREATOR__MENU": "Menu",
+  "COMPONENTS__SKILLTREE_CREATOR__PREMIUM_ENABLE": "Enable Premium Skills",
+  "COMPONENTS__SKILLTREE_CREATOR__PREMIUM_DISABLE": "Disable Premium Skills",
   "COMPONENTS__SKILLTREE_CREATOR__CHANGE_LANGUAGE": "Change Language",
   "COMPONENTS__SKILLTREE_CREATOR__ABOUT": "About",
   "COMPONENTS__SKILLTREE_CREATOR__IMPORT_LEGACY": "Import Legacy Skilltree",
