--- a/src/assets/i18n/xx.json
+++ b/src/assets/i18n/xx.json
@@ -75,6 +75,8 @@
   "COMPONENTS__SKILLTREE_CREATOR__SAVE": "XXX",
   "COMPONENTS__SKILLTREE_CREATOR__BACK": "XXX",
   "COMPONENTS__SKILLTREE_CREATOR__MENU": "XXX",
+  "COMPONENTS__SKILLTREE_CREATOR__PREMIUM_ENABLE": "XXX",
+  "COMPONENTS__SKILLTREE_CREATOR__PREMIUM_DISABLE": "XXX",
   "COMPONENTS__SKILLTREE_CREATOR__CHANGE_LANGUAGE": "XXX",
   "COMPONENTS__SKILLTREE_CREATOR__ABOUT": "XXX",
   "COMPONENTS__SKILLTREE_CREATOR__IMPORT_LEGACY": "XXX",
