remove = from the upgrade plan

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -107,7 +107,7 @@
   "COMPONENTS__SKILLS__BACKPACK__ROWS": "Rows",
   "COMPONENTS__SKILLS__BACKPACK__ROWS_SUFFIX": "rows",
   "COMPONENTS__SKILLS__BACKPACK__ROWS_PREFIX": "",
-  "COMPONENTS__SKILLS__BACKPACK__ROWS_POPUP": "<p>The number of rows the inventory will have.<br>  Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__BACKPACK__ROWS_POPUP": "<p>The number of rows the inventory will have.<br>  Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__BACKPACK__DROP_DEATH": "Drop content on death?",
   "COMPONENTS__SKILLS__BEHAVIOR__FRIENDLY": "Friendly Mode",
   "COMPONENTS__SKILLS__BEHAVIOR__AGGRESSIVE": "Aggressive Mode",
@@ -117,123 +117,123 @@
   "COMPONENTS__SKILLS__CONTROL__ACTIVE": "Active?",
   "COMPONENTS__SKILLS__DAMAGE__DAMAGE_SUFFIX": "damage",
   "COMPONENTS__SKILLS__DAMAGE__DAMAGE_PREFIX": "",
-  "COMPONENTS__SKILLS__DAMAGE__DAMAGE_POPUP": "<p>The amount of damage the pet will cause with melee attacks.<br>Format: [+-=][number]<br>Examples:<br>+2.5<br>-3<br>=6.0</p>",
+  "COMPONENTS__SKILLS__DAMAGE__DAMAGE_POPUP": "<p>The amount of damage the pet will cause with melee attacks.<br>Format: [+-][number]<br>Examples:<br>+2.5<br>-3.0</p>",
   "COMPONENTS__SKILLS__DAMAGE__DAMAGE": "Damage",
   "COMPONENTS__SKILLS__FIRE__CHANCE": "Chance",
   "COMPONENTS__SKILLS__FIRE__CHANCE_PREFIX": "",
   "COMPONENTS__SKILLS__FIRE__CHANCE_SUFFIX": "%",
-  "COMPONENTS__SKILLS__FIRE__CHANCE_POPUP": "<p>The chance the pet will light an enemy on fire on hit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__FIRE__CHANCE_POPUP": "<p>The chance the pet will light an enemy on fire on hit.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__FIRE__DURATION": "Duration",
   "COMPONENTS__SKILLS__FIRE__DURATION_PREFIX": "",
   "COMPONENTS__SKILLS__FIRE__DURATION_SUFFIX": "sec",
-  "COMPONENTS__SKILLS__FIRE__DURATION_POPUP": "<p>The duration the target will be on fire.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__FIRE__DURATION_POPUP": "<p>The duration the target will be on fire.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__HEAL__TIMER": "Timer",
   "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_PREFIX": "Heal every",
   "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_SUFFIX": "seconds",
-  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_POPUP": "<p>The time between healing.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_POPUP": "<p>The time between healing.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__HEAL__HEALTH": "Added Health",
   "COMPONENTS__SKILLS__HEAL__HEALTH_PREFIX": "",
   "COMPONENTS__SKILLS__HEAL__HEALTH_SUFFIX": "health",
-  "COMPONENTS__SKILLS__HEAL__HEALTH_POPUP": "<p>The amount of health the pet will heal.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__HEAL__HEALTH_POPUP": "<p>The amount of health the pet will heal.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__STOMP__DAMAGE": "Damage",
   "COMPONENTS__SKILLS__STOMP__DAMAGE_PREFIX": "",
   "COMPONENTS__SKILLS__STOMP__DAMAGE_SUFFIX": "damage",
-  "COMPONENTS__SKILLS__STOMP__DAMAGE_POPUP": "<p>The damage the pet will cause with stomping on the ground.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__STOMP__DAMAGE_POPUP": "<p>The damage the pet will cause with stomping on the ground.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__STOMP__CHANCE": "Chance",
   "COMPONENTS__SKILLS__STOMP__CHANCE_PREFIX": "",
   "COMPONENTS__SKILLS__STOMP__CHANCE_SUFFIX": "%",
-  "COMPONENTS__SKILLS__STOMP__CHANCE_POPUP": "<p>The chance the pet will stomp on the ground.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__STOMP__CHANCE_POPUP": "<p>The chance the pet will stomp on the ground.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__KNOCKBACK__CHANCE": "Chance",
   "COMPONENTS__SKILLS__KNOCKBACK__CHANCE_PREFIX": "",
   "COMPONENTS__SKILLS__KNOCKBACK__CHANCE_SUFFIX": "%",
-  "COMPONENTS__SKILLS__KNOCKBACK__CHANCE_POPUP": "<p>The chance the pet will knock back his target on hit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__KNOCKBACK__CHANCE_POPUP": "<p>The chance the pet will knock back his target on hit.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__LIGHTNING__CHANCE": "Chance",
   "COMPONENTS__SKILLS__LIGHTNING__CHANCE_PREFIX": "",
   "COMPONENTS__SKILLS__LIGHTNING__CHANCE_SUFFIX": "%",
-  "COMPONENTS__SKILLS__LIGHTNING__CHANCE_POPUP": "<p>The chance a hit will cause a lightning.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__LIGHTNING__CHANCE_POPUP": "<p>The chance a hit will cause a lightning.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__LIGHTNING__DAMAGE": "Damage",
   "COMPONENTS__SKILLS__LIGHTNING__DAMAGE_PREFIX": "",
   "COMPONENTS__SKILLS__LIGHTNING__DAMAGE_SUFFIX": "%",
-  "COMPONENTS__SKILLS__LIGHTNING__DAMAGE_POPUP": "<p>The damage the lightning strike will cause.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__LIGHTNING__DAMAGE_POPUP": "<p>The damage the lightning strike will cause.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__WITHER__CHANCE": "Chance",
   "COMPONENTS__SKILLS__WITHER__CHANCE_PREFIX": "",
   "COMPONENTS__SKILLS__WITHER__CHANCE_SUFFIX": "%",
-  "COMPONENTS__SKILLS__WITHER__CHANCE_POPUP": "<p>The chance the pet will wither it'S target on hit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__WITHER__CHANCE_POPUP": "<p>The chance the pet will wither it'S target on hit.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__WITHER__DURATION": "Duration",
   "COMPONENTS__SKILLS__WITHER__DURATION_PREFIX": "",
   "COMPONENTS__SKILLS__WITHER__DURATION_SUFFIX": "sec",
-  "COMPONENTS__SKILLS__WITHER__DURATION_POPUP": "<p>The duration the target is withered.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__WITHER__DURATION_POPUP": "<p>The duration the target is withered.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__SLOW__CHANCE": "Chance",
   "COMPONENTS__SKILLS__SLOW__CHANCE_PREFIX": "",
   "COMPONENTS__SKILLS__SLOW__CHANCE_SUFFIX": "%",
-  "COMPONENTS__SKILLS__SLOW__CHANCE_POPUP": "<p>The chance at which the pet will slow it's target on hit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__SLOW__CHANCE_POPUP": "<p>The chance at which the pet will slow it's target on hit.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__SLOW__DURATION": "Duration",
   "COMPONENTS__SKILLS__SLOW__DURATION_PREFIX": "",
   "COMPONENTS__SKILLS__SLOW__DURATION_SUFFIX": "sec",
-  "COMPONENTS__SKILLS__SLOW__DURATION_POPUP": "<p>The duration the target will be slowed.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__SLOW__DURATION_POPUP": "<p>The duration the target will be slowed.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__POISON__CHANCE": "Chance",
   "COMPONENTS__SKILLS__POISON__CHANCE_PREFIX": "",
   "COMPONENTS__SKILLS__POISON__CHANCE_SUFFIX": "%",
-  "COMPONENTS__SKILLS__POISON__CHANCE_POPUP": "<p>The chance the pet will poison it's target on hit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__POISON__CHANCE_POPUP": "<p>The chance the pet will poison it's target on hit.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__POISON__DURATION": "Duration",
   "COMPONENTS__SKILLS__POISON__DURATION_PREFIX": "",
   "COMPONENTS__SKILLS__POISON__DURATION_SUFFIX": "%",
-  "COMPONENTS__SKILLS__POISON__DURATION_POPUP": "<p>The duration the target will be poisioned.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__POISON__DURATION_POPUP": "<p>The duration the target will be poisioned.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__THORNS__CHANCE": "Chance",
   "COMPONENTS__SKILLS__THORNS__CHANCE_PREFIX": "",
   "COMPONENTS__SKILLS__THORNS__CHANCE_SUFFIX": "%",
-  "COMPONENTS__SKILLS__THORNS__CHANCE_POPUP": "<p>The chance damage from an attacker is reflected.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__THORNS__CHANCE_POPUP": "<p>The chance damage from an attacker is reflected.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__THORNS__REFLECTION": "Reflection",
   "COMPONENTS__SKILLS__THORNS__REFLECTION_PREFIX": "",
   "COMPONENTS__SKILLS__THORNS__REFLECTION_SUFFIX": "%",
-  "COMPONENTS__SKILLS__THORNS__REFLECTION_POPUP": "<p>The percentage of the damage that will be reflected to the attacket.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__THORNS__REFLECTION_POPUP": "<p>The percentage of the damage that will be reflected to the attacket.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__SHIELD__CHANCE": "Chance",
   "COMPONENTS__SKILLS__SHIELD__CHANCE_PREFIX": "",
   "COMPONENTS__SKILLS__SHIELD__CHANCE_SUFFIX": "%",
-  "COMPONENTS__SKILLS__SHIELD__CHANCE_POPUP": "<p>The chance at which damage is reflected from the owner to the pet.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__SHIELD__CHANCE_POPUP": "<p>The chance at which damage is reflected from the owner to the pet.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__SHIELD__REDIRECTED": "Redirected",
   "COMPONENTS__SKILLS__SHIELD__REDIRECTED_PREFIX": "",
   "COMPONENTS__SKILLS__SHIELD__REDIRECTED_SUFFIX": "%",
-  "COMPONENTS__SKILLS__SHIELD__REDIRECTED_POPUP": "<p>The percentage of the damage that will be reflected to the pet.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__SHIELD__REDIRECTED_POPUP": "<p>The percentage of the damage that will be reflected to the pet.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__LIFE_HEALTH": "Health",
   "COMPONENTS__SKILLS__LIFE_HEALTH_PREFIX": "",
   "COMPONENTS__SKILLS__LIFE_HEALTH_SUFFIX": "extra health",
-  "COMPONENTS__SKILLS__LIFE_HEALTH_POPUP": "<p>The amount of extra health the pet will get.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__LIFE_HEALTH_POPUP": "<p>The amount of extra health the pet will get.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__PICKUP__RANGE": "Range",
   "COMPONENTS__SKILLS__PICKUP__RANGE_PREFIX": "",
   "COMPONENTS__SKILLS__PICKUP__RANGE_SUFFIX": "meters",
-  "COMPONENTS__SKILLS__PICKUP__RANGE_POPUP": "<p>The range where blocks will be picked up by the pet.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__PICKUP__RANGE_POPUP": "<p>The range where blocks will be picked up by the pet.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__PICKUP__EXP": "Can pick up exp?",
   "COMPONENTS__SKILLS__SPRINT__ACTIVE": "Active?",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN": "Fly Regen Rate",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN_PREFIX": "",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN_SUFFIX": "Meters/Tick",
-  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_POPUP": "<p>Only needed when the fly limit is active.<br>How fast the pet can fly again.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_POPUP": "<p>Only needed when the fly limit is active.<br>How fast the pet can fly again.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT": "Fly Limit",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_PREFIX": "",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_SUFFIX": "meters",
-  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_POPUP": "<p>Limit how long the pet can fly.<br>Setting it to 0 will disable the limit.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_POPUP": "<p>Limit how long the pet can fly.<br>Setting it to 0 will disable the limit.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RIDE__CAN_FLY": "Can Fly?",
   "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT": "Jump Height",
   "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT_PREFIX": "",
   "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT_SUFFIX": "blocks",
-  "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT_POPUP": "<p>How high the pet can jump.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT_POPUP": "<p>How high the pet can jump.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RIDE__SPEED": "Ride Speed",
   "COMPONENTS__SKILLS__RIDE__SPEED_PREFIX": "",
   "COMPONENTS__SKILLS__RIDE__SPEED_SUFFIX": "%",
-  "COMPONENTS__SKILLS__RIDE__SPEED_POPUP": "<p>The speed at which the owner can ride the pet.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RIDE__SPEED_POPUP": "<p>The speed at which the owner can ride the pet.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__BEACON__RANGE": "Buff Range",
   "COMPONENTS__SKILLS__BEACON__RANGE_PREFIX": "",
   "COMPONENTS__SKILLS__BEACON__RANGE_SUFFIX": "meters",
-  "COMPONENTS__SKILLS__BEACON__RANGE_POPUP": "<p>The amount of buffs the owner of the pet can select at once.<br>Format: [+-=][number]<br>Examples:<br>+5<br>-13<br>=1</p>",
+  "COMPONENTS__SKILLS__BEACON__RANGE_POPUP": "<p>The amount of buffs the owner of the pet can select at once.<br>Format: [+-][number]<br>Examples:<br>+5<br>-13</p>",
   "COMPONENTS__SKILLS__BEACON__DURATION": "Buff duration",
   "COMPONENTS__SKILLS__BEACON__DURATION_PREFIX": "",
   "COMPONENTS__SKILLS__BEACON__DURATION_SUFFIX": "sec",
-  "COMPONENTS__SKILLS__BEACON__DURATION_POPUP": "<p>The duration the beacon buffs will last.<br>Format: [+-=][number]<br>Examples:<br>+5<br>-13<br>=1</p>",
+  "COMPONENTS__SKILLS__BEACON__DURATION_POPUP": "<p>The duration the beacon buffs will last.<br>Format: [+-][number]<br>Examples:<br>+5<br>-13</p>",
   "COMPONENTS__SKILLS__BEACON__NUMBER": "Number of available buffs",
   "COMPONENTS__SKILLS__BEACON__NUMBER_PREFIX": "",
   "COMPONENTS__SKILLS__BEACON__NUMBER_SUFFIX": "buffs",
-  "COMPONENTS__SKILLS__BEACON__NUMBER_POPUP": "<p>The range the beacon buffs will be distributed.<br>Format: [+-=][number]<br>Examples:<br>+5<br>-13<br>=1</p>",
+  "COMPONENTS__SKILLS__BEACON__NUMBER_POPUP": "<p>The range the beacon buffs will be distributed.<br>Format: [+-][number]<br>Examples:<br>+5<br>-13</p>",
   "COMPONENTS__SKILLS__BEACON__BUFF_LEVEL": "Level",
   "COMPONENTS__SKILLS__BEACON__BUFF__FIRE_RESISTANCE": "Fire Resistance",
   "COMPONENTS__SKILLS__BEACON__BUFF__STRENGTH": "Strength",
@@ -248,12 +248,12 @@
   "COMPONENTS__SKILLS__BEACON__BUFF__ABSORPTION": "Absorbtion",
   "COMPONENTS__SKILLS__RANGED__RATE": "Rate of fire",
   "COMPONENTS__SKILLS__RANGED__RATE_PREFIX": "",
-  "COMPONENTS__SKILLS__RANGED__RATE_SUFFIX": " x 50ms delay = shots/second",
-  "COMPONENTS__SKILLS__RANGED__RATE_POPUP": "<p>The rate at which the pet will shot.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RANGED__RATE_SUFFIX": " x 50ms delay  shots/second",
+  "COMPONENTS__SKILLS__RANGED__RATE_POPUP": "<p>The rate at which the pet will shot.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RANGED__RANGE": "Range",
   "COMPONENTS__SKILLS__RANGED__RANGE_PREFIX": "",
   "COMPONENTS__SKILLS__RANGED__RANGE_SUFFIX": "meters",
-  "COMPONENTS__SKILLS__RANGED__RANGE_POPUP": "<p>The range the pet will start shooting.<br>Format: [+-=][number]<br>Examples:<br>+2<br>-3<br>=6</p>",
+  "COMPONENTS__SKILLS__RANGED__RANGE_POPUP": "<p>The range the pet will start shooting.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE": "PROJECTILE",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__EGG": "Egg",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__WITHER_SKULL": "Wither Skull",
