add new component for duplicating skilltrees

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,6 +19,13 @@
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_DUPLICATE": "There is already a skilltree with this name.",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_REQUIRE": "Please enter a skilltree name.",
 
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__DUPLICATE_SKILLTREE": "Duplicate Skilltree",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ENTER_NAME": "Please enter the name of the duplicate.",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__NAME": "Duplicate Name",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__DONE": "Done",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_DUPLICATE": "There is already a skilltree with this name.",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_REQUIRE": "Please enter a valid skilltree name.",
+
   "COMPONENTS__SKILLTREE_EDITOR__SKILL_EDITOR": "Skill Editor",
   "COMPONENTS__SKILLTREE_EDITOR__PROPERTIES": "Properties",
 
@@ -48,7 +55,7 @@
   "COMPONENTS__SKILLTREE_LIST__ADD_SKILLTREES": "Add Skilltree",
   "COMPONENTS__SKILLTREE_LIST__EDIT_PROPERTIES": "Edit Skilltree Properties",
   "COMPONENTS__SKILLTREE_LIST__EDIT_UPGRADES": "Edit Skill Upgrades",
-  "COMPONENTS__SKILLTREE_LIST__COPY_SKILLTREE": "Copy Skilltree",
+  "COMPONENTS__SKILLTREE_LIST__COPY_SKILLTREE": "Duplicate Skilltree",
   "COMPONENTS__SKILLTREE_LIST__DELETE_SKILLTREE": "Delete {{name}}",
   "COMPONENTS__SKILLTREE_LIST__ADD_SUCCESS": "{{id}} was added successfully.",
   "COMPONENTS__SKILLTREE_LIST__DELETE_SUCCESS": "{{id}} was deleted successfully.",
