--- a/src/assets/i18n/xx.json
+++ b/src/assets/i18n/xx.json
@@ -19,6 +19,13 @@
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_DUPLICATE": "XXX",
   "COMPONENTS__SKILLTREE_ADD_DIALOG__ERROR_REQUIRE": "XXX",
 
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__DUPLICATE_SKILLTREE": "XXX",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ENTER_NAME": "XXX",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__NAME": "XXX",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__DONE": "XXX",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_DUPLICATE": "XXX",
+  "COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_REQUIRE": "XXX",
+
   "COMPONENTS__SKILLTREE_EDITOR__SKILL_EDITOR": "XXX",
   "COMPONENTS__SKILLTREE_EDITOR__PROPERTIES": "XXX",
 
