replaced the range with damage in the ranged skill

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -258,10 +258,10 @@
   "COMPONENTS__SKILLS__RANGED__RATE_PREFIX": "",
   "COMPONENTS__SKILLS__RANGED__RATE_SUFFIX": " x 50ms delay  shots/second",
   "COMPONENTS__SKILLS__RANGED__RATE_POPUP": "<p>The rate at which the pet will shot.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
-  "COMPONENTS__SKILLS__RANGED__RANGE": "Range",
-  "COMPONENTS__SKILLS__RANGED__RANGE_PREFIX": "",
-  "COMPONENTS__SKILLS__RANGED__RANGE_SUFFIX": "meters",
-  "COMPONENTS__SKILLS__RANGED__RANGE_POPUP": "<p>The range the pet will start shooting.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
+  "COMPONENTS__SKILLS__RANGED__DAMAGE": "Damage",
+  "COMPONENTS__SKILLS__RANGED__DAMAGE_PREFIX": "",
+  "COMPONENTS__SKILLS__RANGED__DAMAGE_SUFFIX": "damage",
+  "COMPONENTS__SKILLS__RANGED__DAMAGE_POPUP": "<p>The damage the pet will deal with ranged attacks.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE": "PROJECTILE",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__EGG": "Egg",
   "COMPONENTS__SKILLS__RANGED__PROJECTILE__WITHER_SKULL": "Wither Skull",
