limit upgrade inputs

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -114,6 +114,7 @@
   "COMPONENTS__SKILLS__DONT_CHANGE": "Don't change",
   "COMPONENTS__SKILLS__ACTIVATE": "Activate",
   "COMPONENTS__SKILLS__DEACTIVATE": "Deactivate",
+  "COMPONENTS__SKILLS__ERROR_FORMAT": "Invalid value! Format: {{format}}",
   "COMPONENTS__SKILLS__BACKPACK__ROWS": "Rows",
   "COMPONENTS__SKILLS__BACKPACK__ROWS_SUFFIX": "rows",
   "COMPONENTS__SKILLS__BACKPACK__ROWS_PREFIX": "",
@@ -217,7 +218,7 @@
   "COMPONENTS__SKILLS__SPRINT__ACTIVE": "Active?",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN": "Fly Regen Rate",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN_PREFIX": "",
-  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_SUFFIX": "Meters/Tick",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_SUFFIX": "meters/tick",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN_POPUP": "<p>Only needed when the fly limit is active.<br>How fast the pet can fly again.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT": "Fly Limit",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_PREFIX": "",
