--- a/src/assets/i18n/xx.json
+++ b/src/assets/i18n/xx.json
@@ -112,6 +112,7 @@
   "COMPONENTS__SKILLS__DONT_CHANGE": "XXX",
   "COMPONENTS__SKILLS__ACTIVATE": "XXX",
   "COMPONENTS__SKILLS__DEACTIVATE": "XXX",
+  "COMPONENTS__SKILLS__ERROR_FORMAT": "XXX {{format}}",
   "COMPONENTS__SKILLS__BACKPACK__ROWS": "XXX",
   "COMPONENTS__SKILLS__BACKPACK__ROWS_SUFFIX": "XXX",
   "COMPONENTS__SKILLS__BACKPACK__ROWS_PREFIX": "XXX",
